--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -1,19 +1,5 @@
 body{
     display: flex;
-    flex-direction: column;
-}
-
-main{
-    display: flex;
-    flex-direction: row;
-    flex: auto;
-
-}
-article{
-    flex: 2;
-    overflow-y: auto;
-}
-aside{
-    flex: 1;
-    overflow-y: auto;
+    color: yellow;
+    background-color: yellow;
 }
