--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -1,20 +1,42 @@
 body{
     display: flex;
     flex-direction: column;
+    color: blue;
+    background-color:yellow;
+    padding: auto;
+    
 }
 
 main{
     display: flex;
     flex-direction: row;
     flex: auto;
+    background-color: green;
+    border-width: 2px;
+    border-color:black;
 }
 
 article{
     flex: 2;
     overflow-y: auto;
+    background-color: yellowgreen;
+    
 }
 aside{
     flex: 1;
     overflow-y: auto;
+    background-color: blue;
+    border-style: solid;
+    border-width: 5px;
+    border-color: aqua;
+}
+footer{
+    background-color: bisque;
+}
+
+header{
+    background-color: azure;
+    border-width: 10px;
+    border-color:black;
 }
 
