--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -2,7 +2,7 @@ body{
     display: flex;
     flex-direction: column;
     color: blue;
-    background-color:yellow;
+    background-color:orange;
     
     
 }
@@ -39,4 +39,6 @@ header{
     border-width: 10px;
     border-color:black;
 }
+
+
 
