Simplify services list

--- a/flexbox/3-styles.css
+++ b/flexbox/3-styles.css
@@ -380,6 +380,13 @@
 
   }
   
+  /* Section SERVICES ============================= */
+  .section-services .row {
+    display: flex;
+    flex-wrap: wrap;
+
+
+  }
 
   /*** 4. CARD ***/
   
