--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -71,7 +71,7 @@
     --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: .04rem;
     --nav-item-display: inline-block;
-    --nav-item-margin: 0 2rem 0 0;
+    --nav-item-margin: 0 0 0 2rem;
     --nav-item-link-hover: var(--color-white);
   
     /** BUTTON **/
@@ -200,7 +200,7 @@
   
   /* Navbar
       ============================= */
-  nav{
+  nav {
     display: flex;
   }
   
@@ -216,7 +216,6 @@
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
     letter-spacing: var(--nav-item-letter-spacing);
-    margin: var(--nav-item-margin);
   }
   
   .nav .nav-link {
@@ -246,7 +245,7 @@
     width: 100%;
   }
 
-  nav.nav-item + .nav-item{
+  .nav.nav-item + .nav-item{
     margin: 0 0 0 2rem;
   }
   
