--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -248,6 +248,10 @@
   .nav.nav-item + .nav-item{
     margin: 0 0 0 2rem;
   }
+
+  .nav .nav-item + .nav-item {
+    margine: 1px;
+  }
   
   /* Header
       ============================= */
