--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -251,7 +251,7 @@
   }
 
   .nav .nav-item + .nav-item {
-    margin-top: 10px;
+    margin-top: 10px;  /* Replace 10px with your desired margin value */
   }
   
   /* Header
