--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -255,8 +255,9 @@
   }
 
   .nav .nav-item + .nav-item {
-    margin: 0%;
+    margin-top: 10px; /* Adjust the margin value as needed */
   }
+  
   
   /* Header
       ============================= */
